--- a/studio/package.json
+++ b/studio/package.json
@@ -21,6 +21,7 @@
     "@sanity/default-layout": "^0.140.20",
     "@sanity/default-login": "^0.140.15",
     "@sanity/desk-tool": "^0.140.20",
+    "@sanity/vision": "^0.140.34",
     "date-fns": "^1.30.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
